# LLM-CW2

./: .env.example  .gitignore  DTS407TC_A2_执行方案.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js  奇葩说争议热点辩题30条.md
backend/: __init__.py
backend/app/: config.py  main.py  models.py
backend/app/agents/: debate.py  prompts.py
backend/app/core/: deepseek.py  judge.py  metrics.py  ollama.py
backend/app/data/: topics.json
backend/app/tools/: __init__.py  search.py
docs/presentation/: dts407tc_a2_slides.md
docs/report/: dts407tc_a2_report.tex
evaluation/: batch_eval_qipashuo.py  run_eval.py
evaluation/results/qipashuo_20260517-121027/: qipashuo_results.csv  qipashuo_results.json  qipashuo_stats.json  qipashuo_summary.md
frontend/: index.html
frontend/src/: App.jsx  api.js  styles.css
scripts/: export_docs.sh  package_submission.sh
tests/: test_api.py  test_debate_architecture.py  test_deepseek.py  test_metrics.py  test_search.py
